<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="30dp"
    android:paddingBottom="50dp"
    android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_add_black_24dp"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Add a task"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Fill the details below to add a task into your TODO"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Task title"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/addTaskTitle"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:hint="@string/hint_task_title"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Task description"
        tools:ignore="MissingPrefix" />

    <EditText
        android:id="@+id/addTaskDescription"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:hint="@string/hint_task_desc"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Task date"
        tools:ignore="MissingPrefix" />

    <EditText
        android:id="@+id/taskDate"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:hint="@string/hint_date"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        tools:ignore="MissingPrefix,UnusedAttribute" />

    <TextView
        android:text="Task time"
        android:layout_marginLeft="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        tools:ignore="MissingPrefix" />

    <EditText
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:id="@+id/taskTime"
        android:hint="@string/hint_task_time"
        tools:ignore="MissingPrefix" />

    <TextView
        android:layout_marginLeft="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Add an event"
        tools:ignore="MissingPrefix" />

    <EditText
        android:id="@+id/taskEvent"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:hint="@string/hint_event"
        tools:ignore="MissingPrefix" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_task"
        android:background="@drawable/btn_background"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="40dp" />

</LinearLayout>
</ScrollView>